# trinitycounselor

./: .env.example  .env.local.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  fetch_tiktok.py  index.html  middleware.ts  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: ci.yml
api/: analyze.js  fingerprint.js  recs.js
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx
app/(app)/chat/: page.tsx
app/(app)/couple/: page.tsx
app/(app)/us/: page.tsx
app/api/chat/: route.ts
backend/: .env.example  Dockerfile  alembic.ini  config.py  database.py  enrichment.py  fingerprint.py  main.py  models.py  pyproject.toml  recommend.py  requirements.txt  song_parser.py  tiktok.py
backend/agents/: agent_a.py  agent_b.py  agent_r.py  base_agent.py
backend/agents/prompts/: agent_a.py  agent_b.py  agent_r.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/api/middleware/: auth.py
backend/api/routes/: agent_a.py  agent_b.py  agent_r.py  sessions.py
backend/app/: config.py  deps.py  main.py
backend/app/agents/: agent_a.py  agent_b.py  agent_r.py
backend/app/agents/graph/: nodes.py  state.py
backend/app/agents/prompts/: agent_a_system.py  agent_b_system.py  agent_r_system.py  sap_system.py
backend/app/api/: health.py
backend/app/api/v1/: agent_a.py  agent_b.py  agent_r.py  relationships.py  router.py
backend/app/auth/: encryption.py  jwt.py
backend/app/core/: exceptions.py  logging.py
backend/app/db/: session.py
backend/app/memory/: pgvector_store.py
backend/app/privacy/: mediator.py  sap.py  schemas.py
backend/app/rkg/: neo4j_client.py  queries.py  schema.py
backend/auth/: jwt.py  keys.py
backend/db/: neo4j.py  postgres.py
backend/graph/: queries.py  rkg_client.py  schema.cypher
backend/memory/: conversation_store.py  pgvector_store.py
backend/models/: message.py  pattern.py  session.py  user.py
backend/privacy/: encryption.py  mediator.py  synthesizer.py
backend/routers/: auth.py  enrichment.py  fingerprint.py  import_routes.py  recommendations.py  settings.py  videos.py
backend/tests/: conftest.py
backend/tests/test_agents/: test_crisis_detection.py
backend/tests/test_api/: test_health.py  test_privacy_boundary.py
backend/tests/test_privacy/: test_sap_schemas.py
components/: ChatInterface.tsx  CoupleConnect.tsx  Nav.tsx
frontend/: App.tsx  app.json  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: BottomNav.jsx  ChatBubble.tsx
frontend/src/screens/: Dashboard.jsx  ForYou.jsx  Import.jsx  JointSessionScreen.tsx  (+3 more)
human-mode/: .env.example  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
human-mode/app/: globals.css  layout.tsx  page.tsx
human-mode/components/: Header.tsx  HoldToExitButton.tsx  QRCodeDisplay.tsx  Timer.tsx
human-mode/lib/: session.ts  supabase.ts
human-mode/public/: manifest.json
infra/: docker-compose.yml
infra/neo4j/: init.cypher
lib/: agents.ts
prototype/: README.md  agents.py  chat.py  demo.py  main.py  requirements.txt  storage.py
prototype/static/: index.html  landing.html
scripts/: init_db.py  seed_neo4j.py
src/: App.jsx
src/components/: BottomNav.jsx
src/screens/: ForYou.jsx  Saved.jsx  Setup.jsx
supabase/: schema.sql
tests/: test_agent_a.py  test_privacy_mediator.py  test_rkg.py
(+7 files in other folders)
